src/test/deca/syntax/parser/invalid/decl_var_type_reserved_words_print.deca
// Parser test, type unavailable

{
    print x = 5;
}